2007-04-02  Andrew Cagney  <cagney@redhat.com>

	* EventLoop.java: Refactor Poll code into PollEventLoop.java.
	* PollEventLoop.java: New file.
	* TestSigChild.java: Use PollEventLoop.
	* TestEventLoop.java: Ditto.

2007-03-28  Mark Wielaard  <mark@klomp.org>

	* TimerEvent.java (logger): Use frysk.event for getLogger().

2007-02-24  Tim Moore  <timoore@redhat.com>

	* EventLoop.java (runEventLoop): Add some logging.

2007-01-10  Nurdin Premji  <npremji@redhat.com>

	* EventLoop.java (EventLoop): Use Logger.getLogger instead of EventLogger.get.
	EventLogger.get should only be called to set up the logger(s).

2006-12-11  Andrew Cagney  <cagney@redhat.com>

	* .cvsignore: Delete.

2006-12-06  Nurdin Premji  <npremji@redhat.com>

	* TestSigChild.java: Ditto.
	* RequestStopEvent.java: Added (C).	

2006-11-14  Andrew Cagney  <cagney@redhat.com>

	* TestSigChild.java: Use frysk.junit.TestCase.
	* TestEventLoop.java: Ditto.

2006-10-02  Nurdin Premji  <npremji@redhat.com>

	* RequestEventLoopStop.java: Added, seems to be a common event.
	* EventLoop (add): Added more detail to log, include event.
	* TestEventLoop.java (DidExecute): Added toString.
	(testScheduleBeforeRun) use RequestEventLoopStop Event.	

2006-09-11  Andrew Cagney  <cagney@redhat.com>

	* TimerEvent.java: Pass just "frysk" to getLogger, work-around.

2006-08-16  Andrew Cagney  <cagney@redhat.com>

	* TimerEvent.java: Specify "frysk.event" as the logger, delete
	unused import of frysk.Config.

2006-05-25  Stan Cox  <scox@redhat.com>

	* EventLoop.java (wakeupIfBlocked): Change to FINEST.
	(add): Change to FINEST.
	(remove): Change to FINEST.
	(checkForTimerEvents): Change to FINEST.
	(processSignal): Change to FINEST.
	* TimerEvent.java: Change to FINEST.
	(reSchedule): Change to FINEST.


2006-03-14  Andrew Cagney  <cagney@redhat.com>

	* EventLoop.java: Update; frysk.sys.Poll simplified, member
	SignalSet deleted, Fds parameter removed.

2006-03-12  Andrew Cagney  <cagney@redhat.com>
