@@ -1,3 +1,8 @@
+2007-04-03  Andrew Cagney  <cagney@redhat.com>
+
+	* PollEventLoop.java: Replace frysk.sys.Poll.Observer with
+	frysk.sys.PollBuilder.
+
 2007-04-02  Andrew Cagney  <cagney@redhat.com>
 
 	* EventLoop.java: Refactor Poll code into PollEventLoop.java.
